--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
                           <h6 class="u-grey" style="margin-bottom: 20px">Summer 2018
                           </h6>
                           <h6 style="margin-bottom: 20px"> VIA - A concept that bridges the patient and provider.  </h6>
-                          <h6 style="margin-bottom: 20px">Report coming soon.
-                          </h6>
+                          <a class="button" href="via.html">View</a>
+
 
                         </div>
                       </div>
