--- a/via.html
+++ b/via.html
@@ -50,27 +50,16 @@
     </div>
 </div>
 
-<div class="header"><h3>IQVIA</h3></div>
-<div class="info"
+<div class="header"><h3>VIA</h3></div>
+<div class="info">
 <p>
-  During my internship at IQVIA, there was a hackathon that I participated in Through my 10 week internship I worked on various projects, participated in a hackathon , and contributed to a meaningful industry. My main project was to develop a landing page for internal users, with an approximate ROI of $100k. Last but not least, in my second to last week at IQVIA I worked on "Study Optimizer" and independently redesigned the interface.
-
+During my internship at <a href = "iqvia">IQVIA </a> I had the chance to participate in a 2-day intern hackathon.
+The theme was <span style = "font-weight:bold">improve the relationship between patient to provider.</span>
 </p>
+<p>I collaborated with a group of 4 other people to create <span style = "font-weight:bold">VIA </span>,  a personal health monitor that connects you with your primary physician.</p>
 
 
-<h3>Use Cases</h3>
-<li> Security
-model learns from user’s data and prevents collecting false data.
-Clinical trials:
-can find trials you are eligible for; a second opinion for treatments
-Early detection
-can alert physician of trends that may indicate health issues
-Building/teaching the model
-IQVIA will have less biased data, in part because of Virtual Trials
-Model is trained with lifestyle data in addition to past research
-No current regulations on the use of AI in healthcare</li>
-
-
+<br />
 <iframe src="https://onedrive.live.com/embed?cid=2564511D32F4B59A&resid=2564511D32F4B59A%21106&authkey=ADczl3xZF9ZARmY&em=2" width="402" height="327" frameborder="0" scrolling="no"></iframe>
 
 <!-- <br />
